# archivr

./: .dockerignore  .gitignore  AGENTS.md  ARCHIVR-MENTAL-MODEL.md  Cargo.toml  Dockerfile  LICENSE.md  NEXT.md  README.md  docker-compose.yml  flake.nix
.github/workflows/: update-ytdlp.yml
crates/archivr-cli/: Cargo.toml
crates/archivr-cli/src/: main.rs
crates/archivr-cli/src/downloader/: tweets.rs
crates/archivr-core/: Cargo.toml
crates/archivr-core/src/: archive.rs  capture.rs  database.rs  hash.rs  lib.rs
crates/archivr-core/src/downloader/: cookies.rs  font_extractor.rs  http.rs  metadata.rs  mod.rs  singlefile.rs  tweets.rs  ytdlp.rs
crates/archivr-server/: Cargo.toml
crates/archivr-server/src/: auth.rs  main.rs  registry.rs  routes.rs
crates/archivr-server/static/: app.js  index.html  styles.css
crates/archivr-server/static/assets/: index--omjmik8.js  index-5jBL9-i7.css  index-8HhvMz5i.js  index-8YEyAmP9.css  index-A4sxjUxl.js  index-AE6iQI2Q.js  index-B0SNwnT5.css  index-B0h3YYO-.js  index-B2Gbe8XQ.js  index-B2ZDSzbi.css  index-B3kn2Uq8.js  index-B4F8YNlR.css  index-B67momER.js  index-B7dq_VAM.js  index-BB_JhtCc.js  index-BEaPUEBm.css  index-BEbGvi2K.js  index-BGQ5_lWF.js  index-BGSI2WEx.css  index-BHg5-TAr.js  index-BHmYoVqT.js  index-BOyLHdsN.js  index-BSM-rrXx.css  index-BUvOwbYR.js  index-BW0QKHXE.css  index-BWKljqgT.js  index-BZfMx3eM.css  index-BZnJs_tc.js  index-Ba3TFwml.css  index-BbGz9qlG.js  index-BfwsUa2j.js  index-Biv9sexV.js  index-BlDAGZHO.js  index-BlLU3Wcz.js  index-BpGwC-YY.js  index-BpXoSc97.js  index-Bw7BuUg-.css  index-Bxtvq8vS.js  index-Bysig1_i.js  index-C0BIEdow.css  (+90 more)
docker/: config.example.toml
docs/: PLAN.md  README.md
docs/superpowers/plans/: 2026-06-01-web-ui-foundation.md  2026-06-21-track1-entry-detail-artifact-access.md  2026-06-25-auth-foundation.md  2026-07-20-playlist-children.md
docs/superpowers/specs/: 2026-06-01-web-ui-design.md  2026-06-25-auth-foundation-design.md
frontend/: index.html  package.json  vite.config.js
frontend/.storybook/: main.js  preview.js
frontend/src/: App.jsx  api.js  main.jsx  styles.css  utils.js
frontend/src/components/: AdminView.jsx  AudioBar.jsx  CaptureDialog.jsx  CaptureDialog.stories.jsx  CollectionsView.jsx  ContextRail.jsx  EntriesView.jsx  EntryRow.jsx  EntryRow.stories.jsx  IframePreview.jsx  ImagePreview.jsx  LoginPage.jsx  PreviewModal.jsx  PreviewPage.jsx  PreviewPanel.jsx  PublicCollectionPage.jsx  PublicCollectionPage.stories.jsx  RunsView.jsx  SettingsView.jsx  SetupPage.jsx  SkeletonEntryRow.jsx  TagsView.jsx  TagsView.stories.jsx  ToastStack.jsx  Topbar.jsx  Topbar.stories.jsx  TweetPreview.jsx  UIPatterns.stories.jsx  VideoPreview.jsx
modules/nixos/: archivr-server.nix
src/: database.rs  hash.rs  main.rs  twitter.rs
src/downloader/: local.rs  mod.rs  store.rs  tweets.rs  youtube.rs  ytdlp.rs
