[package]
name = "archivr-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "archivr"
path = "src/main.rs"

[dependencies]
archivr-core = { path = "../archivr-core" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
