[package]
name = "archivr-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
uuid.workspace = true
reqwest = { workspace = true }
base64.workspace = true

[dev-dependencies]
tempfile = "3"
